# advent_of_code_2021

./: .gitmodules  CMakeLists.txt  README.md
day1/: day1.cpp  day1.h
day2/: CMakeLists.txt  day2.cpp  day2.h  main.cpp  test_day2.cpp
day3/: CMakeLists.txt  day3.cpp  day3.h  main.cpp  test_day3.cpp
